updated privacy policy

--- a/index.html
+++ b/index.html
@@ -72,22 +72,11 @@
                             </div>
                         </div>
                         <div class="card">
-                            <div class="card-header card-header-title">E-Mails:</div>
+                            <div class="card-header card-header-title">Faith Game Privacy Policy</div>
                             <div class="card-content">
-                                <div class="list-block">
-                                    <ul>
-                                        <li class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title">supportfaithquiz@gmail.com</div>
-                                            </div>
-                                        </li>
-                                        <li class="item-content">
-                                            <div class="item-inner">
-                                                <div class="item-title">feedbackfaithquiz@gmail.com</div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                </div>
+                                All actions on our App will be sent to our server and recorded. 
+                                Your data is used to show the global leaderboard and to check your answers.
+                                If you dont agree with this, you are not allowed to use the app.
                             </div>
                         </div>
                     </div>
