--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                         <div class="card">
                             <div class="card-header card-header-title">Faith Game Privacy Policy</div>
                             <div class="card-content">
-                                All actions on our App will be sent to our server and recorded. 
-                                Your data is used to show the global leaderboard and to check your answers.
+                                All actions on our App will be sent to our server and recorded. <br />
+                                Your data is used to show the global leaderboard and to check your answers. <br />
                                 If you dont agree with this, you are not allowed to use the app.
                             </div>
                         </div>
