jonas sein style

--- a/index.html
+++ b/index.html
@@ -73,10 +73,19 @@
                         </div>
                         <div class="card">
                             <div class="card-header card-header-title">Faith Game Privacy Policy</div>
-                            <div class="card-content">
+                            <div class="card-content" >
+                                <div class="list-block">
+                                    <ul>
+                                        <li class="item-content">
+                                            <div class="item-inner">
+                                                <div class="item-title">
                                 All actions on our App will be sent to our server and recorded. <br />
                                 Your data is used to show the global leaderboard and to check your answers. <br />
-                                If you dont agree with this, you are not allowed to use the app.
+                                If you dont agree with this, you are not allowed to use the app.</div>
+                                            </div>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
