--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                                     <ul>
                                         <li class="item-content">
                                             <div class="item-inner">
-                                                <div class="item-title">
+                                                <div>
                                 All actions on our App will be sent to our server and recorded. <br />
                                 Your data is used to show the global leaderboard and to check your answers. <br />
                                 If you dont agree with this, you are not allowed to use the app.</div>
