--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="navbar">
                 <div data-page="page" class="navbar-inner">
                     <div class="left"></div>
-                    <div class="center">Faith Quiz Support</div>
+                    <div class="center">Faith Quiz Privacy policy</div>
                     <div class="right"></div>
                 </div>
             </div>
